--- a/index.dev.html
+++ b/index.dev.html
@@ -6,18 +6,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 		<style>
 			body {
-				font-family: Monospace;
-				background-color: #808080;
-				color: #fff;
+				background-color: #ffffff;
 				margin: 0;
 			}
-			canvas {
-				display: block;
-			}
-			#VRButton {
-				color: blue !important;
-				background-color: white !important;
-			}
+      canvas {
+        display: block;
+      }
+      #VRButton {
+        color: blue !important;
+        background-color: white !important;
+        bottom: 40px !important;
+        border-radius: 0 !important;
+        opacity: 1 !important;
+      }
 		</style>
 	</head>
 	<body>
