--- a/index.dev.html
+++ b/index.dev.html
@@ -22,6 +22,6 @@
 		</style>
 	</head>
 	<body>
-		<script type="module" src="js/Game.js"></script>
+		<script type="module" src="src/Game.js"></script>
 	</body>
 </html>
